--- a/TS/index.htm
+++ b/TS/index.htm
@@ -19,7 +19,7 @@
 <a href="newpage2.htm">中二</a>&nbsp;&nbsp;&nbsp;&nbsp; <a href="newpage3.htm">中三</a>&nbsp;&nbsp;&nbsp;&nbsp; 
 <a href="newpage4.htm">中四</a>&nbsp;&nbsp;&nbsp;&nbsp; <a href="newpage5.htm">中五</a>&nbsp;&nbsp;&nbsp;&nbsp;</font></b></p>       
   
-<p align="center"><b><font size="5"> <a href="../_tf/index.html"></a></font><a href="../_tf/index.html"><font size="3">(初中另頁)</font></a><font size="3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<p align="center"><b><font size="5"> <a href="../_tf/index.html"></a></font><a href="../index.htm"><font size="3">(初中另頁)</font></a><font size="3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 <a href="http://www.cmass2.edu.hk/comm3/">校內聯網</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 <a href="downloadpage.htm">免費軟体下載</a> </font><font size="2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 <a href="NetTestMethod.htm">呈分方法及測試</a></font></b></p>    
