--- a/index.htm
+++ b/index.htm
@@ -251,7 +251,7 @@ ZH-TW;mso-bidi-language:AR-SA"><b>機械臂製作</b></span></li>
   
     <TD width="27%" bgColor=#ccff99>            
   
-      <P align=center><a href="TS/index.htm/"><b>科技概論中四/中五</b></a></P></TD>            
+      <P align=center><a href="TS/index.htm"><b>科技概論中四/中五</b></a></P></TD>            
   
     <TD width="23%" bgColor=#ccff99>            
   
